--- a/bs.html
+++ b/bs.html
@@ -8,144 +8,71 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
     /* 全局风格：简约、现代，参考 Apple.com 的配色 */
     body {
-      background-color: #fafafa;
-      font-family: 'Noto Sans SC', -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
+      background-color: #ffffff;
+      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
       color: #1d1d1f;
-      line-height: 1.6;
       padding: 20px;
       position: relative;
     }
     h1, h2, h3 {
       font-weight: 500;
-      letter-spacing: -0.5px;
     }
     /* 自定义样式：蓝色加粗标题 */
     .blue-bold-header {
-      color: #0071e3;
-      font-weight: 700;
-      font-size: 2.5rem;
-      margin-bottom: 2rem;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.1);
+      color: #0071e3; /* 蓝色 */
+      font-weight: bold;
     }
     .section-header {
-      margin: 3rem 0 1.5rem;
-      border-bottom: 2px solid #e8e8e8;
-      padding-bottom: 0.75rem;
-      font-size: 1.75rem;
-      color: #1d1d1f;
+      margin: 2rem 0 1rem;
+      border-bottom: 2px solid #f0f0f0;
+      padding-bottom: 0.5rem;
     }
     .subsection-header {
-      margin: 2rem 0 1.25rem;
+      margin: 1.5rem 0 1rem;
       color: #0071e3;
-      font-size: 1.5rem;
     }
     /* 列表组样式，注重信息展示的清晰度 */
     .list-group-item {
       border: none;
-      border-radius: 8px;
-      padding: 1.25rem;
-      margin-bottom: 0.5rem;
-      background-color: #ffffff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      transition: all 0.3s ease;
-    }
-    .list-group-item:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-bottom: 1px solid #f0f0f0;
+      padding: 1rem 0;
     }
     .list-group-item:last-child {
-      margin-bottom: 0;
+      border-bottom: none;
     }
     .detail {
-      font-size: 0.95rem;
-      color: #666;
-      margin-top: 0.5rem;
-      line-height: 1.5;
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: 0.25rem;
     }
     a {
-      color: #0071e3;
+      color: #0071e3; /* 蓝色 */
       text-decoration: none;
-      transition: all 0.3s ease;
-      position: relative;
+      transition: color 0.3s ease;
     }
     a:hover {
       color: #005bb5;
-      text-decoration: none;
-    }
-    a::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      bottom: -2px;
-      left: 0;
-      background-color: #0071e3;
-      transform: scaleX(0);
-      transition: transform 0.3s ease;
-    }
-    a:hover::after {
-      transform: scaleX(1);
+      text-decoration: underline;
     }
     .resource-icon {
       color: #0071e3;
-      margin-right: 0.75rem;
-      font-size: 1.1rem;
+      margin-right: 0.5rem;
     }
     /* 有序列表样式 */
     ol {
       padding-left: 1.5rem;
-      counter-reset: item;
     }
     ol li {
-      padding: 1.25rem;
-      margin: 0.75rem 0;
-      background: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      list-style: none;
-      position: relative;
-      transition: all 0.3s ease;
+      padding: 1rem 0;
+      border-bottom: 1px solid #f0f0f0;
+      margin-left: 1rem;
+      padding-left: 0.5rem;
     }
-    ol li:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    ol li::before {
-      content: counter(item) ".";
-      counter-increment: item;
-      position: absolute;
-      left: -2rem;
-      color: #0071e3;
-      font-weight: 500;
-    }
-    /* 容器样式 */
-    .container-fluid {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 2rem;
-      background-color: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-    }
-    /* 响应式调整 */
-    @media (max-width: 768px) {
-      .container-fluid {
-        padding: 1rem;
-      }
-      .blue-bold-header {
-        font-size: 2rem;
-      }
-      .section-header {
-        font-size: 1.5rem;
-      }
-      .subsection-header {
-        font-size: 1.25rem;
-      }
+    ol li:last-child {
+      border-bottom: none;
     }
   </style>
 </head>
